# ce-infer

./: Cargo.toml  README.md  models.toml
.github/workflows/: ci.yml
crates/ce-infer-cli/: Cargo.toml
crates/ce-infer-cli/src/: main.rs
crates/ce-infer-core/: Cargo.toml
crates/ce-infer-core/src/: audit.rs  billing.rs  caps.rs  lib.rs  probe.rs  proto.rs  registry.rs  serve.rs
crates/ce-infer-core/tests/: properties.rs  units.rs
crates/ce-infer-router/: Cargo.toml
crates/ce-infer-router/src/: lib.rs  main.rs
crates/ce-infer-router/tests/: billing_and_stream.rs  end_to_end.rs  live_mesh.rs  properties.rs
crates/ce-infer-shard/: Cargo.toml
crates/ce-infer-shard/src/: lib.rs
crates/ce-infer-worker/: Cargo.toml
crates/ce-infer-worker/src/: backend.rs  main.rs
