[workspace]
resolver = "2"
members = [
    "crates/ce-infer-core",
    "crates/ce-infer-worker",
    "crates/ce-infer-router",
    "crates/ce-infer-cli",
    "crates/ce-infer-shard",
]

# ce-infer — the distributed clinical-inference app for the hospital, built ON CE primitives
# (identity + mesh transport + blobs + ledger + the ce-cap capability verifier). It is an APP, not
# part of the node: it talks ONLY to a local CE node's HTTP API via ce-rs and adds NO node
# endpoints. v1 = pooled whole-model workers + a smart OpenAI-compatible router.

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Leif Rydenfalk <ledamecrydenfalk@gmail.com>"]
repository = "https://github.com/ce-net/ce-infer"

[workspace.dependencies]
# Internal crates.
ce-infer-core = { path = "crates/ce-infer-core" }

# CE substrate (path deps — ce-infer lives next to ce-rs and ce/ in the ce-net workspace).
ce-rs = { path = "../ce-rs" }
ce-cap = { path = "../ce/crates/ce-cap" }
ce-identity = { path = "../ce/crates/ce-identity" }

anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
hex = "0.4"
sha2 = "0.10"
bincode = "1"
sysinfo = "0.32"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
axum = "0.7"
futures = "0.3"
